Added lead home experience

--- a/src/index.html
+++ b/src/index.html
@@ -37,16 +37,15 @@
         <div class="text-center mb-30">
           <div class="profile-image" style="background-image: url('/resume/images/profile-2.JPG');"></div>
         </div>
-        <p class="text-center">Freelance Web Developer<br/>CTO and Founder, Psypher</p>
+        <p class="text-center">Software architect for Leadhome<br/>Founder, Psypher</p>
         <div class="text-center mt-30">
-          <a target="_blank" href="mailto:justus@psypher.co.za" class="badge connect">justus@psypher.co.za</a>
-          <a target="_blank" href="http://psypher.co.za/" class="badge connect">Psypher</a><br/>
+          <a target="_blank" href="http://www.leadhome.co.za/" class="badge connect">Leadhome</a>
+          <a target="_blank" href="http://psypher.co.za/" class="badge connect">Psypher</a>
           <a target="_blank" href="https://github.com/justusburger" class="badge connect">Github</a>
           <a target="_blank" href="https://www.toptal.com/resume/justus-burger" class="badge connect">Toptal</a>
-          <a target="_blank" href="https://www.upwork.com/freelancers/~0193edb7ea42f901a3" class="badge connect">Upwork
-            Pro</a>
-          <a target="_blank" href="https://www.linkedin.com/in/justus-burger-a2568129?"
-             class="badge connect">LinkedIn</a>
+          <a target="_blank" href="https://www.upwork.com/freelancers/~0193edb7ea42f901a3" class="badge connect">Upwork Pro</a>
+          <a target="_blank" href="https://www.linkedin.com/in/justus-burger-a2568129?" class="badge connect">LinkedIn</a>
+          <a target="_blank" href="mailto:justus@psypher.co.za" class="badge connect">justus@psypher.co.za</a>
           <a target="_blank" href="https://www.facebook.com/justus.burger" class="badge connect">Facebook</a>
           <a target="_blank" href="https://twitter.com/justusburger" class="badge connect">Twitter</a>
         </div>
@@ -56,9 +55,9 @@
       <div class="ptb-30 plr-15">
         <section class="pb-30">
           <h1 class="title" style="margin-left: -6px">Justus Burger</h1>
-          <h2 class="sub-title">Web Developer</h2>
+          <h2 class="sub-title">Software architect</h2>
           <div class="mt-30">
-            <p>With more than 8 years experience in the trenches, I have seen many projects through all stages of
+            <p>With more than 9 years experience in the trenches, I have seen many projects through all stages of
               development. From small design focused websites, to large enterprise scale applications, I am well
               equipped and experienced to handle almost anything you can throw my way.</p>
             <p>The first 4 years of my experience was mostly focused on server side development using everything
@@ -66,7 +65,7 @@
               master in the art of UI development. Since then, I have specialized in AngularJS and most recently
               React. </p>
             <p>My weapon of choice is React, Redux, ES6 and Webpack and I believe this will become more and more
-              prominent in months to come.</p>
+              prominent in years to come.</p>
           </div>
         </section>
 
@@ -80,8 +79,8 @@
             <div class="rating"><i class="material-icons">lens</i><i class="material-icons">lens</i><i
                     class="material-icons">lens</i><i class="material-icons">lens</i><i
                     class="material-icons half">lens</i></div>
-            <h3>React + Redux</h3>
-            <h4>ES6 | Babel | NPM Scripts | Webpack</h4>
+            <h3>Isomorphic React + Redux</h3>
+            <h4>ES6 | Babel | NodeJS | Webpack</h4>
             <div>
               <span class="badge">react-redux</span>
               <span class="badge">react-router-redux</span>
@@ -197,6 +196,26 @@
           </h3>
 
           <div class="experience">
+            <h3>Leadhome</h3>
+            <h4><a target="_blank" href="https://www.leadhome.co.za/">www.leadhome.co.za</a></h4>
+            <p>Turning the real estate industry on it's head, Leadhome is the first agency in SA to use
+            amazing tech and automation to make the process of buying and selling affordable.</p>
+            <p>The tech consists of multiple layers of magic. In the front sits a next gen fully Isomorphic React + Redux
+            website. This is served by a .NET API abstracting away integration with a PostgreSQL DB, SalesForce, and a few data providers.
+            The website also consumes a REST API from a custom Wordpress instance serving as an amazing content management platform.</p>
+            <p>All of this is hosted on AWS and published with a full continues integration system.</p>
+            <p>
+              <span class="badge">Isomorphic React + Redux</span>
+              <span class="badge">ES6 + Babel</span>
+              <span class="badge">aws</span>
+              <span class="badge">webpack</span>
+              <span class="badge">Wordpress</span>
+              <span class="badge">.NET + PostgreSQL</span>
+              <span class="badge">SalesForce</span>
+            </p>
+          </div>
+
+          <div class="experience">
             <h3>FanAngel LLC</h3>
             <h4><a target="_blank" href="http://fanangel.com/">www.fanangel.com</a></h4>
             <p>FanAngel is a sports focused crowd-funding platform - imagine Kickstarter meets ESPN. FanAngel
@@ -210,6 +229,46 @@
               <span class="badge">aws</span>
               <span class="badge">php + laravel</span>
               <span class="badge">mysql</span>
+            </p>
+          </div>
+
+          <div class="experience">
+            <h3>MiX Telematics</h3>
+            <h4><a target="_blank" href="http://www.mixtelematics.co.za/">www.mixtelematics.co.za</a></h4>
+            <p>MiX Telematics is the world leader in enterprise vehicle tracking and logistics software.</p>
+            <p data-expand-container>
+              <a class="btn-more badge clearfix" data-expand="#mix-responsibilities">
+                <i class="material-icons pull-right">more_horiz</i>
+              </a>
+            </p>
+            <ul class="collapse responsibilities" id="mix-responsibilities">
+              <li>Developed a fleet management web application called DynaMiX, which is used for vehicle
+                position and event tracking by large corporations including Parmalat, Shell, the Belgian police
+                force, and more.
+              </li>
+              <li>Developed an info hub component with a TweetDeck-like user experience for the management of
+                events, jobs, and messages.
+              </li>
+              <li>Developed a fleet administration component enabling users to manage fleet details, servicing
+                records and reminders, vehicle access control, mobile tracking unit configuration, and lots
+                more.
+              </li>
+              <li>Developed a hosting and operations component enabling support staff to create new client
+                databases, manage organisational settings, and more.
+              </li>
+              <li>Developed unit tests to ensure product stability and minimize regression.</li>
+              <li>Provided support for a tracking component enabling users to view current and historical trip
+                data.
+              </li>
+              <li>Developed a notification component enabling users to create custom notifications for vehicle
+                events.
+              </li>
+            </ul>
+            <p>
+              <span class="badge">ASP.NET</span>
+              <span class="badge">Nancy</span>
+              <span class="badge">AngularJS + TypeScript</span>
+              <span class="badge">MSSQL + Entity Framework</span>
             </p>
           </div>
 
@@ -230,18 +289,18 @@
           </div>
 
           <div class="experience">
-            <h3>Christ Gen Church</h3>
-            <h4><a target="_blank" href="http://christgen.co.za/">www.christgen.co.za</a></h4>
-            <p>Christ Gen is a Cape Town based church, making a big difference in it's community and area. </p>
-            <p>Designed and developed main church website by building a custom Wordpress theme, using custom post
-              types and the Advanced Custom Fields plugin.</p>
+            <h3>byRoeline</h3>
+            <h4><a target="_blank" href="http://byroeline.co.za/">www.byroeline.co.za</a></h4>
+            <p>byRoeline is a South African based clothing brand boasting a collection of earth-friendly, ethically made lines.
+              From minimalist casual to couture, byRoeline is all modern and sophisticated clothing for adults and kids.</p>
             <p>
-              <span class="badge">wordpress</span>
-              <span class="badge">custom theme</span>
-              <span class="badge">html5 + css3</span>
+              <span class="badge">Wordpress custom theme</span>
+              <span class="badge">HTML5 + SASS</span>
               <span class="badge">php + mysql</span>
             </p>
           </div>
+
+
 
           <p class="pt-15" data-expand-container>
             <a class="btn-more badge clearfix" data-expand=".more-experience">
@@ -249,6 +308,20 @@
             </a>
           </p>
           <div class="collapse more-experience">
+            <div class="experience">
+              <h3>Christ Gen Church</h3>
+              <h4><a target="_blank" href="http://christgen.co.za/">www.christgen.co.za</a></h4>
+              <p>Christ Gen is a Cape Town based church, making a big difference in it's community and area. </p>
+              <p>Designed and developed main church website by building a custom Wordpress theme, using custom post
+                types and the Advanced Custom Fields plugin.</p>
+              <p>
+                <span class="badge">wordpress</span>
+                <span class="badge">custom theme</span>
+                <span class="badge">html5 + css3</span>
+                <span class="badge">php + mysql</span>
+              </p>
+            </div>
+
             <div class="experience">
               <h3>Anza Flooring</h3>
               <h4><a target="_blank" href="http://anzaflooring.co.za/">www.anzaflooring.co.za</a></h4>
@@ -276,46 +349,6 @@
                 <span class="badge">angular</span>
                 <span class="badge">typescript</span>
                 <span class="badge">ASP.NET Web API</span>
-                <span class="badge">MSSQL + Entity Framework</span>
-              </p>
-            </div>
-
-            <div class="experience">
-              <h3>MiX Telematics</h3>
-              <h4><a target="_blank" href="http://www.mixtelematics.co.za/">www.mixtelematics.co.za</a></h4>
-              <p>MiX Telematics is the world leader in enterprise vehicle tracking and logistics software.</p>
-              <p data-expand-container>
-                <a class="btn-more badge clearfix" data-expand="#mix-responsibilities">
-                  <i class="material-icons pull-right">more_horiz</i>
-                </a>
-              </p>
-              <ul class="collapse responsibilities" id="mix-responsibilities">
-                <li>Developed a fleet management web application called DynaMiX, which is used for vehicle
-                  position and event tracking by large corporations including Parmalat, Shell, the Belgian police
-                  force, and more.
-                </li>
-                <li>Developed an info hub component with a TweetDeck-like user experience for the management of
-                  events, jobs, and messages.
-                </li>
-                <li>Developed a fleet administration component enabling users to manage fleet details, servicing
-                  records and reminders, vehicle access control, mobile tracking unit configuration, and lots
-                  more.
-                </li>
-                <li>Developed a hosting and operations component enabling support staff to create new client
-                  databases, manage organisational settings, and more.
-                </li>
-                <li>Developed unit tests to ensure product stability and minimize regression.</li>
-                <li>Provided support for a tracking component enabling users to view current and historical trip
-                  data.
-                </li>
-                <li>Developed a notification component enabling users to create custom notifications for vehicle
-                  events.
-                </li>
-              </ul>
-              <p>
-                <span class="badge">ASP.NET</span>
-                <span class="badge">Nancy</span>
-                <span class="badge">AngularJS + TypeScript</span>
                 <span class="badge">MSSQL + Entity Framework</span>
               </p>
             </div>
